--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 										<li>
 											<h3>Social</h3>
 											<ul class="icons">
-												<li><a href="https://twitter.com/pranayrao28" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+												<li><a href="https://twitter.com/pranayrao28" class="fa-twitter"><span class="label">Twitter</span></a></li>
 												<li><a href="https://github.com/pranayrao28" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 												<li><a href="https://medium.com/@pranayrao28" class="icon brands fa fa-medium"><span class="label">Medium</span></a></li>
 												<li><a href="https://www.linkedin.com/in/pranayrao28/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
