--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 												
 												<li><a href="https://github.com/pranayrao28" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 												<li><a href="https://medium.com/@pranayrao28" class="icon brands fa fa-medium"><span class="label">Medium</span></a></li>
-												<li><a href="https://www.linkedin.com/in/pranayrao28/" <span class = "Label"><i class='fa fa-cart-plus'></i></span>LinkedIn</span></a></li>
+												<li><a href="https://www.linkedin.com/in/pranayrao28/" class="a fa-cart-plus"> <span class="Label">LinkedIn</span></a></li>
 											</ul>
 										</li>
 									</ul>
