--- a/index.html
+++ b/index.html
@@ -185,10 +185,9 @@
 										<li>
 											<h3>Social</h3>
 											<ul class="icons">
-												<li><a href="https://twitter.com/pranayrao28" <i class="fa fa-address-book" style="font-size:24px"></i>Twitter</a></li>
-												
-												<li><a href="https://github.com/pranayrao28" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-												<li><a href="https://medium.com/@pranayrao28" class="icon brands fa fa-medium"><span class="label">Medium</span></a></li>
+												<li><a href="https://twitter.com/pranayrao28" style="font-size:24px"></i>Twitter</a></li>
+												<li><a href="https://github.com/pranayrao28">GitHub</a></li>
+												<li><a href="https://medium.com/@pranayrao28" > Medium</a></li
 												<li><a href="https://www.linkedin.com/in/pranayrao28/">LinkedIn</a></li>
 											</ul>
 										</li>
