--- a/index.html
+++ b/index.html
@@ -185,10 +185,10 @@
 										<li>
 											<h3>Social</h3>
 											<ul class="icons">
-												<li><a href="https://twitter.com/pranayrao28" style="font-size:24px"></i>Twitter</a></li>
-												<li><a href="https://github.com/pranayrao28">GitHub</a></li>
-												<li><a href="https://medium.com/@pranayrao28" > Medium</a></li
-												<li><a href="https://www.linkedin.com/in/pranayrao28/">LinkedIn</a></li>
+												<li><a href="https://twitter.com/pranayrao28" style="font-size:24px">Twitter</li>
+												<li><a href="https://github.com/pranayrao28"/>GitHub></li>
+												<li><a href="https://medium.com/@pranayrao28">Medium</li
+												<li><a href="https://www.linkedin.com/in/pranayrao28/">LinkedIn</li>
 											</ul>
 										</li>
 									</ul>
