--- a/index.html
+++ b/index.html
@@ -185,6 +185,8 @@
 										<li>
 											<h3>Social</h3>
 											<ul class="icons">
+												<i class="fa-brands fa-linkedin"></i>
+												<li><a rel="nofollow noopener" target="_blank" title="LinkedIn" href="http://www.facebook.com/share.php?u=https%3A%2F%2Fwww.free-css.com%2Ffree-css-templates%2Fpage275%2Ftriple-p&amp;t=Triple%20P"><span><em>facebook</em></span></a></li>
 												<li><a href="https://twitter.com/pranayrao28" style="font-size:24px">Twitter</li>
 												<li><a href="https://github.com/pranayrao28"/>GitHub></li>
 												<li><a href="https://medium.com/@pranayrao28">Medium</li
